# vendee_globe

./: README.md  pyproject.toml  race_2024.parquet  vendee_globe.py  vendee_globe_2024_2025.ipynb
data/: Glossaire - Vendée Globe.htm  race_2020.parquet  web_2020.parquet  web_2024.parquet  wiki_2024.parquet
src/vendee_globe/: __init__.py  constants.py  vendee_globe.py
src/vendee_globe/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/vendee_globe/catboost_info/learn/: events.out.tfevents
