[project]
name = "vendee-globe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeanne", email = "jeanne.wwork@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "catboost>=1.2.7",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.1",
    "nbformat>=4.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "plotly>=6.0.0",
    "pyarrow>=19.0.1",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "shap>=0.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
